# queryparts

./: README.md  pyproject.toml
queryparts/: main.py
