[tool.poetry]
name = "queryparts"
version = "0.1.0"
description = "Query Understanding and Decomposition using LLMs"
authors = ["NirantK <nirant.bits@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litellm = "^1.44.4"
fuzzywuzzy = "^0.18.0"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
